<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ImgResultActivity">

    <RelativeLayout
        android:id="@+id/img_select_btns"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:background="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="0dp">

        <Button
            android:id="@+id/btn_save2local"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_bt"
            android:text="@string/save2local"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/my_color"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_save2cloud"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/shape_bt"
            android:text="@string/save2cloud"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/my_color"
            android:textSize="16sp" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/reslut_image"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/img_select_btns"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.197"
        tools:layout_editor_absoluteX="16dp" />
</androidx.constraintlayout.widget.ConstraintLayout>